--- a/src/app/features/dashboard/seeker/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker/seeker-dashboard.component.html
@@ -19,7 +19,7 @@
       <span class="username">{{ user.firstname || 'John Doe' }}</span>
 
       <span class="role-badge seeker">
-        <i class="fas fa-user me-1"></i> Job Seeker
+        <i class="fas fa-user me-1"></i> Seeker
       </span>
       <i class="fas fa-chevron-down dropdown-icon" [class.rotated]="userDropdownOpen"></i>
     </div>
