--- a/src/app/features/dashboard/seeker/components/profile/profile.component.html
+++ b/src/app/features/dashboard/seeker/components/profile/profile.component.html
@@ -74,8 +74,14 @@
       <div class="card-body">
 
         <div class="d-flex flex-column flex-md-row align-items-md-center mb-3">
-          <img [src]="photoURL || defaultPhotoURL" class="rounded-circle me-md-3 mb-2 mb-md-0" width="80" height="80"
+          <img *ngIf="photoURL" [src]="photoURL" class="rounded-circle me-md-3 mb-2 mb-md-0" width="80" height="80"
             alt="Profile Photo">
+          <!-- Initials Fallback -->
+          <div *ngIf="!photoURL"
+            class="bg-light rounded-circle me-md-3 mb-2 mb-md-0 d-flex align-items-center justify-content-center text-primary fw-bold"
+            style="width: 80px; height: 80px; font-size: 2rem;">
+            {{ user.firstname | initials:user.lastname }}
+          </div>
           <div>
             <button type="button" class="btn btn-outline-success btn-sm me-2" (click)="onUploadPhoto(fileInput)"
               [disabled]="isUploading || isDeleting">
