--- a/src/app/features/dashboard/admin/admin-dashboard.component.css
+++ b/src/app/features/dashboard/admin/admin-dashboard.component.css
@@ -17,3 +17,59 @@
   color: #1f2937;
   border: 1px solid #d1d5db;
 }
+
+
+#wrapper {
+    overflow-x: hidden;
+    min-height: 100vh;
+}
+
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    transition: margin 0.25s ease-out;
+    width: 15rem;
+}
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+}
+
+.list-group-item-dark {
+    background-color: #212529;
+    color: #fff;
+    border-color: #343a40;
+}
+
+.list-group-item-dark.active {
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    color: #fff;
+}
+
+.list-group-item-action:hover {
+    background-color: #343a40 !important;
+    color: #fff !important;
+}
+
+.list-group-item-action.active {
+    background-color: #0d6efd !important;
+    color: #fff !important;
+    font-weight: bold;
+}
